# pybind_fail_example

./: .gitignore  CMakeLists.txt  README.md  test.py
src/: CMakeLists.txt  pybind_array.cc
